new methods added to api
