# api/swagger/swagger.yaml
@@ -27,11 +27,11 @@ securityDefinitions:
       public_profile: the user id for a rating
   
 paths:
-  /games:
+  /randGame:
     x-swagger-router-controller: game_controller
     get:
       description: Gets a game for the given specifications
-      operationId: generateGame
+      operationId: randGame
       parameters:
         - name: cards
           in: query
@@ -41,9 +41,32 @@ paths:
           items: 
             type: string
           collectionFormat: csv
+        - name: sets
+          in: query
+          description: the different dominion expansions that are available
+          required: false
+          type: array
+          items:
+            type: string
+          collectionFormat: csv
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/Game"
+        "400":
+          description: game was requested with invalid parameters
+          schema:
+            $ref: "#/definitions/Error"
+  /games:
+    x-swagger-router-controller: game_controller
+    get:
+      description: Gets a game for the given specifications
+      operationId: generateGame
+      parameters:
         - name: players
           in: query
-          description: the players that are playing in the game (only used for optimized games)
+          description: the players that are playing in the game
           required: false
           type: array
           items:
@@ -70,13 +93,13 @@ paths:
         - rating_auth:
           - public_profile
             
-  /games/{id}:
+  /games/{gameId}:
     x-swagger-router-controller: game_controller
     get:
-      description: "Gets the information about a specific game"
+      description: Gets the information about a specific game
       operationId: getGame
       parameters:
-        - name: id
+        - name: gameId
           in: path
           type: string
           description: the identifier of the game
@@ -86,9 +109,92 @@ paths:
           schema:
             $ref: "#/definitions/Game"
             
-  /games/{gameId}/ratings/{rating}:
+    put:
+      description: Puts an unrated game in the user history, indicating it has been played, but not rated.  Will also put the game in the other players history.
+      operationId: playGame
+      parameters:
+        - name: gameId
+          in: path
+          type: string
+          description: the identifier of the game
+        - name: players
+          in: query
+          description: the players that are playing in the game
+          required: false
+          type: array
+          items:
+            type: string
+          collectionFormat: csv
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/Game"
+        "400":
+          description: game was requested with invalid parameters
+          schema:
+            $ref: "#/definitions/Error"
+      security: 
+        - rating_auth:
+          - public_profile
+        
+  /games/{gameId}/prediction:
     x-swagger-router-controller: user_controller
-    post:
+    get:
+      description: gets a prediction for how much a user will like a game (between 0 and 1)
+      operationId: predict
+      parameters:
+        - name: gameId
+          in: path
+          type: string
+          description: the id of a game to rate
+      responses:
+        "200":
+          description: a successful prediction has been made
+          schema:
+            $ref: "#/definitions/Rating"
+      security: 
+        - rating_auth:
+          - public_profile
+  
+  /ratings:
+    x-swagger-router-controller: ratings_controller
+    get:
+      description: gets all the ratings for the user
+      operationId: getRatings
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Rating"
+      security: 
+        - rating_auth:
+          - public_profile
+      
+  /ratings/{gameId}:
+    x-swagger-router-controller: ratings_controller
+    get:
+      description: gets the rating for the user and the game
+      operationId: getRating
+      parameters:
+        - name: gameId
+          in: path
+          type: string
+          description: the id of a game to rate
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/Rating"      
+      security: 
+        - rating_auth:
+          - public_profile
+
+  /ratings/{gameId}/rating/{rating}:
+    x-swagger-router-controller: ratings_controller
+    put:
       description: rates a game for a particular user
       operationId: addRating
       parameters:
@@ -109,25 +215,6 @@ paths:
         - rating_auth:
           - public_profile
           
-  /games/{gameId}/prediction:
-    x-swagger-router-controller: user_controller
-    get:
-      description: gets a prediction for how much a user will like a game (between 0 and 1)
-      operationId: predict
-      parameters:
-        - name: gameId
-          in: path
-          type: string
-          description: the id of a game to rate
-      responses:
-        "200":
-          description: a successful prediction has been made
-          schema:
-            $ref: "#/definitions/Rating"
-      security: 
-        - rating_auth:
-          - public_profile
-
 # complex objects have schema definitions
 definitions:
   Game:
@@ -136,6 +223,8 @@ definitions:
     properties:
       id:
         type: string
+      rating:
+        type: number
       cards:
         type: array
         items:
